package edu.fiuba.algo3.modelo.Defensas;

public class TrampaArenosa extends Defensa{

    public TrampaArenosa(){
        super(0, 0, new Trampa(0.5));
    }


    @Override
    public String representationString() {
        return "TrampaArenosa";
    }
}
