@startuml
abstract class Defensa{
# posicion: Coordenadas
+ asignarPosicion(Coordenada nuevaPosicion)
+ pasarTurno()
+ estaConstruida():Boolean
+ atacar(Enemigo:enemigos)
}

class TorreBlanca{}
class TorrePlateada{}
class TrampaArenosa{}

interface TipoDefensa{
+ atacar(Enemigo: enemigo)
}

class Ataque{
+ Ataque(Int:danio)
}
class Trampa{
+ Trampa(Int:porcentajeRelentizacion)
}

interface EstadoConstruccion{
+ estoyConstruida():Boolean
+ atacar(Enemigo:enemigo, TipoDefensa:tipoDeDefensa)
+ pasoUnTurno():EstadoConstruccion
}
class EnConstruccion{}
class Construido{}
class Destruido{}

Defensa <|-- TorreBlanca
Defensa <|-- TorrePlateada
Defensa <|-- TrampaArenosa

TipoDefensa <- Defensa
Ataque ..|> TipoDefensa
Trampa ..|> TipoDefensa

Defensa -> EstadoConstruccion
EnConstruccion ..|> EstadoConstruccion
Construido ..|> EstadoConstruccion
Destruido ..|> EstadoConstruccion
@enduml